# PytestPrestashop

./: .dockerignore  .env-local  .env-selenoid  .gitignore  Dockerfile  docker-compose-fail.yml  docker-compose.yml  pyproject.toml  readme.md
configuration/: structions.py  ui.py
locators/: base.py  cart_locators.py  common_locators.py  footer_locators.py  header_locators.py  login_locators.py  main.py  order_locators.py  quickview_locators.py  registration_locators.py
models/db/: mysql_db.py
models/types/webdriver/driver/: element.py  element_should.py  element_wait.py  elements.py  elements_should.py  page.py  page_wait.py
models/webdriver/driver/: element.py  element_should.py  element_wait.py  elements.py  elements_should.py  page.py  page_wait.py
models/webdriver/event_listener/: listener.py
models/webdriver/factory/: builders.py  capabilities.py  factory.py  options.py
page_factory/: area.py  button.py  checkbox.py  component.py  dropdown.py  editor.py  grid.py  input.py  popup.py
page_objects/: base_page.py  footer_object.py  header_object.py  login_page.py  registration_page.py
tests/: conftest.py
tests/auth_page/: conftest.py  test_auth_page.py
tests/footer/: conftest.py  test_footer.py
tests/header/: conftest.py  test_header.py
tests/reg_page/: conftest.py  test_reg_page.py
utils/logger_loguru/: logger.py
utils/scripts/: pull_browsers.sh  send_results.py
utils/selenoid/config/: browsers.json
